--- a/list.html
+++ b/list.html
@@ -1,39 +1,47 @@
 <!DOCTYPE html>
 
 <head>
-    <link href="list.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="list.css">
     <title>List Page</title>
     <h1>List of votes</h1>
 </head>
-
-<table>
-    <thead>
-        <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Image</th>
-            <th scope="col">Vote Count</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>Joe Biden</td>
-            <td><img src="./def.png" height="50px"></td>
-            <td>10000</td>
-        </tr>
-        <tr>
-            <td>Trump</td>
-            <td><img src="./def.png" height="50px"></td>
-            <td>9000</td>
-        </tr>
-        <tr>
-            <td>Me</td>
-            <td><img src="./def.png" height="50px"></td>
-            <td>0</td>
-        </tr>
-    </tbody>
-    <tfoot>
-        <td></td>
-        <td>Total</td>
-        <td>19000</td>
-    </tfoot>
-</table>
+<div class="container">
+    <div class="col-sm-1"></div>
+    <div class="col-sm-10">
+        <table class="table table-hover table-responsive">
+            <thead>
+                <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Image</th>
+                    <th scope="col">Vote Count</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Joe Biden</td>
+                    <td><img src="./def.png" height="50px"></td>
+                    <td>10000</td>
+                </tr>
+                <tr>
+                    <td>Trump</td>
+                    <td><img src="./def.png" height="50px"></td>
+                    <td>9000</td>
+                </tr>
+                <tr>
+                    <td>Me</td>
+                    <td><img src="./def.png" height="50px"></td>
+                    <td>0</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <td></td>
+                <td>Total</td>
+                <td>19000</td>
+            </tfoot>
+        </table>
+    </div>
+    <div class="col-sm-1"></div>
+</div>
