--- a/login.html
+++ b/login.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 
 <head>
-    <link href="login.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="login.css">
     <title>Login Page</title>
 </head>
 
 <body>
-    <section class="circle">
-        <form action="submission.html" method="POST">
-            <h1>Login</h1>
-            <label for="username">Username:</label>
-            <input type="text" name="username" id="username">
-            <hr>
-            <label for="password">Password:</label>
-            <input type="password" name="password" id="password">
-            <hr>
-            <input type="submit" value="Submit">
-        </form>
-    </section>
+    <div class="container-fluid">
+        <div class="col-sm-12">
+            <section class="circle">
+                <form action="list.html" method="POST">
+                    <h1>Login</h1>
+                    <label for="username">Username:</label>
+                    <input type="text" name="username" id="username">
+                    <hr>
+                    <label for="password">Password:</label>
+                    <input type="password" name="password" id="password">
+                    <hr>
+                    <input type="submit" value="Login">
+                </form>
+            </section>
+        </div>
+    </div>
 </body>
 
 </html>
